# Self-Soul

./: .env.example  .gitignore  .pre-commit-config.yaml  API_INTEGRATION_GUIDE.md  CI_CD_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  INSTALL_GUIDE.md  LICENSE  MONITORING_SYSTEM.md  MULTIMODAL_PRODUCTION_DEPLOYMENT.md  MULTIMODAL_USER_GUIDE.md  OPERATIONS_GUIDE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_MANAGEMENT.md  README.md  README_zh.md  RUN-AGI  RUN-AGI-SMART.bat  Start-AGI.ps1  VECTOR_STORE_SYSTEM_GUIDE.md  advanced_training_optimizer.py  agi_comparison_report.md  agi_upgrade_implementation_plan.md  basic_test_server.py  build.sh  check_imports.py  check_training.py  cleanup_logs.bat  cleanup_logs.ps1  cleanup_logs.sh  clear_conversation.html  complete_agi_system_enhancement.py  comprehensive_improvement_plan.md  comprehensive_value_test.py  connection_test.html  cross_model_communication_protocol.md  debug_failed_models.py  (+155 more)
.github/: PULL_REQUEST_TEMPLATE.md
.venv_new/: pyvenv.cfg
00000000/: 01.txt  02.txt  03.txt  04.txt  05.txt
app/: README.md  check_system_settings_translations.js  fix_joint_training_translations.js  index.html  json_validate.js  nginx.conf  package-lock.json  package.json  system_overview.html  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.mjs  vite.config.ts
config/: agi_coordinator_config.json  constants.py  external_api_configs.json  model_services_config.json  performance.yml  runtime_config.json  system_config.json
core/: __init__.py  active_reasoning_correction.py  adaptive_learning_engine.py  advanced_emotion_analysis.py  advanced_reasoning.py  advanced_self_learning.py  agi_capability_assessment.py  agi_capability_enhancement_framework.py  agi_coordinator.py  agi_core.py  agi_core_capabilities.py  agi_performance_evaluation_framework.py  agi_self_learning_evolution.py  agi_text_processor.py  agi_tools.py  api_client_factory.py  api_config_manager.py  api_dependency_manager.py  api_exception_handler.py  api_model_connector.py  architecture_evolution_engine.py  autonomous_learning_manager.py  backup_recovery.py  basic_server.py  capability_interface.py  causal_reasoning_enhancer.py  config_manager.py  context_memory.py  core_capabilities.py  core_metrics_collector.py  core_scheduling_layer.py  crash_snapshot_manager.py  creative_problem_solver.py  creative_writing_tool.py  cross_domain_capability_transfer.py  cross_domain_knowledge_reasoning.py  cross_domain_planner.py  cross_domain_task_mapping.py  cycle_prevention_config.py  cycle_prevention_manager.py  (+140 more)
data/: causal_graph_validation_report.txt  meta_learning_history.pkl  meta_model.pth  migrated_causal_knowledge_graph.json  training_history.json
demo_output/: demo_results.json
deployment/: nginx.conf
docs/: COMPLETE_ARCHITECTURE_FRAMEWORK.md  COMPLETE_SOLUTION_FRAMEWORK.md  agi_system_architecture_enhanced.md  architecture.md  architecture_diagram.txt  architecture_evolution_analysis.md  complete_architecture.md  complete_architecture_detailed.md  long_chain_reasoning_analysis.md  multimodal_fusion_analysis.md
examples/: cmcp_demo.py  core_scheduling_demo.py  evolution_integration_example.py  multimodal_integration_demo.py
monitoring/: prometheus.yml
new_agi_system/: README.md  demo.py  final_validation.py  requirements.txt  start.bat  start.sh  test_app_routes.py  test_autonomy_import.py  test_compatibility.py  test_control_import.py  test_direct_import.py  test_humanoid_import.py
results/: individual_training_language_1756740562.json  individual_training_language_1757054501.json  joint_training_1757054501_language_knowledge.json  joint_training_train_1756714703_language_vision_image.json  joint_training_train_1756740367_language_knowledge.json  joint_training_train_1756740562_language_knowledge.json  (+5 more)
(+522 files in other folders)
