[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-soul-agi"
version = "0.1.0"
description = "Self Soul AGI System - A comprehensive AGI framework"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Self Soul Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.70.0",
    "uvicorn>=0.17.0",
    "python-multipart>=0.0.5",
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scikit-learn>=0.24.0",
    "requests>=2.25.0",
    "pyyaml>=5.4.0",
    "loguru>=0.5.0",
    "psutil>=5.8.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.28.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.4.0",
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.6",
    "pydub>=0.25.1",
    "speechrecognition>=3.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.2",
    "plotly>=5.13.0",
    "dash>=2.10.0",
    "paramiko>=3.0.0",
    "pywinrm>=0.5.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "json5>=0.9.11",
    "chardet>=5.1.0",
    "click>=8.1.3",
]

[tool.setuptools]
packages = ["core", "tools"]
include-package-data = true

[tool.setuptools.package-dir]
"core" = "core"
"tools" = "tools"

[tool.setuptools.package-data]
"core" = ["data/**/*", "models/**/*.py"]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pylint.'MASTER']
disable = [
    "C0330",  # bad-continuation
    "C0301",  # line-too-long (handled by black/flake8)
]
max-line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests", "core"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov-report=html --cov-report=term-missing"
min_cov = 85

[tool.coverage.run]
source = ["core"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/settings/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
